[GLT-3685] added REST API for samples and requisitions