@@ -1,4 +1,4 @@
-package ca.on.oicr.gsi.dimsum;
+package ca.on.oicr.gsi.dimsum.service.filtering;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -16,27 +16,22 @@ import org.junit.jupiter.api.Test;
 
 import ca.on.oicr.gsi.dimsum.data.Case;
 import ca.on.oicr.gsi.dimsum.data.Donor;
-import ca.on.oicr.gsi.dimsum.service.filtering.CaseSort;
 
 public class CaseSortTest {
 
-  private static final String[] assaysOrdered = { "A", "B", "C", "D", "E" };
-  private static final String[] caseAssays = { assaysOrdered[1], assaysOrdered[4],
-      assaysOrdered[2], assaysOrdered[0], assaysOrdered[3] };
-  private static String[] donorsOrdered = { "APROJ_0001", "APROJ_0002", "BPROJ_0001",
-      "BPROJ_0002", "BPROJ_0003" };
-  private static String[] caseDonors = { donorsOrdered[2], donorsOrdered[1], donorsOrdered[0],
-      donorsOrdered[4], donorsOrdered[3] };
-  private static LocalDate[] datesOrdered = {
-      LocalDate.of(2021, 03, 13),
-      LocalDate.of(2021, 06, 14),
-      LocalDate.of(2022, 01, 01),
-      LocalDate.of(2022, 06, 10),
-      LocalDate.of(2022, 06, 13)};
-  private static LocalDate[] caseReceiptDates = {datesOrdered[0], datesOrdered[4], datesOrdered[1],
-      datesOrdered[2], datesOrdered[3]};
-  private static LocalDate[] caseActivityDates = {datesOrdered[4], datesOrdered[1], datesOrdered[2],
-      datesOrdered[3], datesOrdered[0]};
+  private static final String[] assaysOrdered = {"A", "B", "C", "D", "E"};
+  private static final String[] caseAssays =
+      {assaysOrdered[1], assaysOrdered[4], assaysOrdered[2], assaysOrdered[0], assaysOrdered[3]};
+  private static String[] donorsOrdered =
+      {"APROJ_0001", "APROJ_0002", "BPROJ_0001", "BPROJ_0002", "BPROJ_0003"};
+  private static String[] caseDonors =
+      {donorsOrdered[2], donorsOrdered[1], donorsOrdered[0], donorsOrdered[4], donorsOrdered[3]};
+  private static LocalDate[] datesOrdered = {LocalDate.of(2021, 03, 13), LocalDate.of(2021, 06, 14),
+      LocalDate.of(2022, 01, 01), LocalDate.of(2022, 06, 10), LocalDate.of(2022, 06, 13)};
+  private static LocalDate[] caseReceiptDates =
+      {datesOrdered[0], datesOrdered[4], datesOrdered[1], datesOrdered[2], datesOrdered[3]};
+  private static LocalDate[] caseActivityDates =
+      {datesOrdered[4], datesOrdered[1], datesOrdered[2], datesOrdered[3], datesOrdered[0]};
 
   @Test
   public void testSortByAssayAscending() {
@@ -86,8 +81,9 @@ public class CaseSortTest {
     assertOrder(cases, Case::getLatestActivityDate, datesOrdered, true);
   }
 
-  private static <T> void assertOrder(List<Case> cases, Function<Case, T> getter,
-      T[] expectedOrder, boolean reversed) {
+  private static <T> void assertOrder(List<Case> cases, Function<Case, T> getter, T[] expectedOrder,
+      boolean reversed) {
+    assertNotNull(cases);
     assertEquals(cases.size(), expectedOrder.length);
     assertEquals(expectedOrder[reversed ? 4 : 0], getter.apply(cases.get(0)));
     assertEquals(expectedOrder[reversed ? 3 : 1], getter.apply(cases.get(1)));
@@ -99,15 +95,11 @@ public class CaseSortTest {
   private static List<Case> getCasesSorted(CaseSort sort, boolean descending) {
     Comparator<Case> comparator = descending ? sort.comparator().reversed() : sort.comparator();
     List<Case> cases = mockCases().stream().sorted(comparator).collect(Collectors.toList());
-    assertNotNull(cases);
-    assertEquals(5, cases.size());
     return cases;
   }
 
   private static List<Case> mockCases() {
-    return IntStream.range(0, 5)
-        .mapToObj(CaseSortTest::mockCase)
-        .collect(Collectors.toList());
+    return IntStream.range(0, 5).mapToObj(CaseSortTest::mockCase).toList();
   }
 
   private static Case mockCase(int caseNumber) {
